--- a/.github/workflows/backend-image.yml
+++ b/.github/workflows/backend-image.yml
@@ -31,11 +31,19 @@ jobs:
         #images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         images: ghcr.io/${{ env.IMAGE_NAME }}
 
-    - name: Build and push
+    - name: Build and push Backend
       uses: docker/build-push-action@v2
       with:
         context: ./backend
         push: true
         #tags: ${{ steps.meta.outputs.tags }}
         tags: ghcr.io/catenax-ng/product-data-integrity-demonstrator-backend:latest
+        labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Build and push Frontend
+      uses: docker/build-push-action@v2
+      with:
+        context: ./frontend
+        push: true
+        tags: ghcr.io/catenax-ng/product-data-integrity-demonstrator-frontend:latest
         labels: ${{ steps.meta.outputs.labels }}
