helm: Try connecting frontend and backend
Signed-off-by: Matthias Binzer <matthias.binzer@de.bosch.com>

--- a/charts/data-integrity-frontend/templates/deployment.yaml
+++ b/charts/data-integrity-frontend/templates/deployment.yaml
@@ -36,6 +36,11 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          env: #https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+          {{- range $key, $val := .Values.env }}
+          - name: {{ $key }}
+            value: {{ $val }}
+          {{- end }}
           livenessProbe:
             httpGet:
               path: /
