--- a/charts/data-integrity-backend/templates/deployment.yaml
+++ b/charts/data-integrity-backend/templates/deployment.yaml
@@ -36,13 +36,18 @@ spec:
             - name: http
               containerPort: 80
               protocol: TCP
+          env: #https://kubernetes.io/docs/tasks/inject-data-application/define-environment-variable-container/
+          {{- range $key, $val := .Values.env }}
+          - name: {{ $key }}
+            value: {{ $val }}
+          {{- end }}
           livenessProbe:
             httpGet:
-              path: /
+              path: /docs#/
               port: http
           readinessProbe:
             httpGet:
-              path: /
+              path: /docs#/
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
