--- a/charts/data-integrity-backend/values.yaml
+++ b/charts/data-integrity-backend/values.yaml
@@ -22,18 +22,23 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+deployment:
+  env:
+    - PORT: 80
+    - WORKERS: 80
+
 service:
   type: ClusterIP
   port: 80
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: data-integrity-backend.demo.catena-x.net
       paths:
         - path: /
           pathType: ImplementationSpecific
